<resources>
    <string name="ams_select_all">Select all</string>
    <string name="disclaimer_terms_condition">이 약관은 삼성전자주식회사(이하 \"Samsung\")가 제공하는 ChatON 서비스(이하 \"서비스\")의 이용과 관련하여 Samsung과 고객과의 권리, 의무 및 책임사항, 기타 필요한 사항을 규정함을 목적으로 합니다. 본 약관은 Samsung 서비스 이용약관에 대한 특별약관입니다. 따라서 본 약관과 Samsung서비스 이용약관이 충돌할 경우 본 약관이 우선하며, 본 약관에 규정되지 아니한 사항은 Samsung 서비스 이용약관에 기재된 바에 의합니다.\n 1 이용약관 동의 및 서비스 가입신청\n 1.1 회원이 서비스를 이용하려면 ChatON 서비스 이용약관(이하 \"특별약관\") 및 Samsung서비스이용약관(\"기본약관\")에 동의하여야 하며(특별약관과 기본약관을 통칭하여 \"이용약관\"), 이용약관 동의 후 이용자 이름을 입력함으로써 가입을 신청합니다. 약관에 동의하지 않는 경우 서비스를 이용할 수 없으며, 해당 서비스에 액세스할 수 없습니다.\n 1.2. 회원이 다음 각 호 중 어느 하나에 해당하는 경우 서비스를 이용할 수 없으며 약관에 동의할 수 없고, 동의한 경우에도 회사의 승낙이 없어 계약관계는 성립하지 아니하는 것으로 합니다.\n (1) 타인의 명의를 이용하거나, 허위의 정보를 기재한 경우\n (2) 14세 미만 아동이 법정대리인(부모 등)의 동의를 얻지 아니한 경우\n (3) 회사가 서비스를 제공하지 않는 국가에 거주하는 경우\n</string>
    <string name="disclaimer_accept_use">1. 개인정보 수집항목 \n - 필수사항 : 이름, 서비스 이용기록, 접속 로그, 쿠키, 접속 IP 정보, 국가, 기기 고유번호, 법정대리인의 이름 및 전화번호(14세 미만 아동의 경우)\n - 선택사항 : 프로필사진, 상태메시지, 휴대폰 번호, 기기 내에 저장된 제3자의 전화번호, SNS 사이트의 계정 정보\n 2. 수집·이용목적 \n 서비스 제공, 본인 확인 등 회원관리, 신규 서비스 개발 및 마케팅에 활용\n 3. 보유·이용기간\n 서비스 이용 중단(계정 삭제)시까지\n ※ 귀하께서는 귀하의 개인정보 수집·이용에 대한 동의를 거부하실 권리가 있으며, 동의를 거부하실 경우 서비스 이용이 제한됩니다.\n</string>
    <string name="disclaimer_privacy_policy">\"삼성전자주식회사\" 은 (이하 \"회사\"는) 고객님의 개인정보를 중요시하며, \"정보통신망 이용촉진 및 정보보호\"에 관한 법률을 준수하고 있습니다.\n 회사는 개인정보취급방침을 통하여 고객님께서 제공하시는 개인정보가 어떠한 용도와 방식으로 이용되고 있으며, 개인정보보호를 위해 어떠한 조치가 취해지고 있는지 알려드립니다.\n 회사는 개인정보취급방침을 개정하는 경우 웹사이트 공지사항(또는 개별공지)을 통하여 공지할 것입니다.\n o 본 방침은 : 2012 년 05 월 14 일 부터 시행됩니다.\n 회사는 회원가입, 상담, 서비스 신청 등등을 위해 아래와 같은 개인정보를 수집하고 있습니다.\n o 수집항목 : 이름 , 휴대전화번호 , 서비스 이용기록 , 접속 로그 , 쿠키 , 접속 IP 정보 , 기기 내에 저장된 제3자의 전화번호, 프로필 사진, 상태 메시지, 국가, 기기 고유 번호 , 법정대리인 이름 , 법정대리인 휴대전화번호\n o 개인정보 수집방법 : 서비스 가입 및 사용 중 이용자의 자발적 제공, 서비스 실행 또는 사용시 자동수집\n</string>
    <string name="logo_url_for_facebook">http://i0.chatoncdn.com/logo1.png?rv=01</string>
    <string name="layout_regist_country_registration">Registration</string>
    <string name="layout_regist_select_country_code_if_differs">Select country code if it differs from yours</string>
    <string name="app_name">ChatON</string>
    <string name="label">ChatON</string>
    <string name="regist_write_country_code">Write a country code</string>
    <string name="regist_already_regist">Already registered</string>
    <string name="dialog_provision_ing">Loading...</string>
    <string name="dialog_userprofile_updating">Saving</string>
    <string name="dialog_connecting_server">Loading...</string>
    <string name="menu_chat_close">Close chat room</string>
    <string name="menu_chat_delete">Delete</string>
    <string name="search_location">Enter location</string>
    <string name="setting_category_privacy">Privacy</string>
    <string name="settings_about">About ChatON</string>
    <string name="settings_help">Help</string>
    <string name="settings_invite_friend">Tell friends</string>
    <string name="settings_chat_view_font_size">Font size</string>
    <string name="settings_chat_view_font_style">Font style</string>
    <string name="settings_birthday_category">Birthdays</string>
    <string name="settings_type">Alert type</string>
    <string name="settings_mute_alert">Mute alert</string>
    <string name="settings_mute_none">None</string>
    <string name="settings_mute_until_7">Until 7 AM tomorrow</string>
    <string name="settings_mute_hour">For 1 hour</string>
    <string name="settings_mute_manually">Set manually</string>
    <string name="settings_mute_repeat">Repeat daily</string>
    <string name="settings_mute_set_toast">Alert muted</string>
    <string name="settings_removed">Removed</string>
    <string name="settings_received_message">Preview</string>
    <string name="settings_received_message_summary">Show part of message when alerted</string>
    <string name="setting_selfsms_time">Time</string>
    <string name="setting_selfsms_retry">Retry</string>
    <string name="setting_about_btn1_text">Terms and privacy</string>
    <string name="setting_disclaimer_terms">Terms and conditions</string>
    <string name="setting_disclaimer_accept">Accept</string>
    <string name="setting_chaton_tell_friends_email_text">Hi. Let\'s keep in touch using ChatON. %s</string>
    <string name="menu_inbox_broadcast">Broadcast</string>
    <string name="toast_network_unable">Network error</string>
    <string name="toast_sdcard_amount">No SD card found</string>
    <string name="toast_end_chat_fail">Failed to close chat. Network error occurred</string>
    <string name="toast_dereg_failed">Failed to delete account</string>
    <string name="toast_push_dereg_failed">Failed to delete account</string>
    <string name="toast_supported_format">Format not supported</string>
    <string name="toast_no_delete_data">No message to delete</string>
    <string name="toast_text_max_Length">Maximum character limit exceeded</string>
    <string name="dialog_title_msgbox_delete">Chat and trunk will be deleted</string>
    <string name="dialog_chatting_me">Me: %s</string>
    <string name="dialog_geo_loading">Loading...</string>
    <string name="dialog_ok">OK</string>
    <string name="date_time_set">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="sdcard_not_found">No SD card found</string>
    <string name="no_geo_point">Failed to find location</string>
    <string name="vcard_type_email">Email</string>
    <string name="vcard_type_other">Other</string>
    <string name="wait_sending">Waiting...</string>
    <string name="dialog_confirm">OK</string>
    <string name="setting_about_current_ver">Current version</string>
    <string name="setting_about_latest_ver">Latest version</string>
    <string name="message_dont_preview">ChatON messages</string>
    <string name="new_message_dont_preview">New ChatON message</string>
    <string name="new_1_message_dont_preview">1 new ChatON message</string>
    <string name="new_chaton_messages">%d new ChatON messages</string>
    <string name="media_photo">Image</string>
    <string name="media_video">Video</string>
    <string name="media_voice">Voice</string>
    <string name="media_map">Location</string>
    <string name="media_calendar">Calendar</string>
    <string name="media_contact">Contacts</string>
    <string name="media_file">File</string>
    <string name="media_event">Event</string>
    <string name="media_animessage">Animessage</string>
    <string name="media_image_text">An image and a message</string>
    <string name="media_video_text">A video and a message</string>
    <string name="buddy_list_optionmenu_sortby">List by</string>
    <string name="setting_birthday">Birthday</string>
    <string name="setting_samsung_account">Samsung account</string>
    <string name="settings_send_log">Send VOC and Log</string>
    <string name="setting_settings_title">Settings</string>
    <string name="ams_title_stamp">Stamp</string>
    <string name="ams_background">Background</string>
    <string name="settings_popup_information">Pop-ups inform you when messages arrive</string>
    <string name="poston_title">PostON</string>
    <string name="settings_privacy_showmynumber">Show my number</string>
    <string name="push_notification_text">Allows message notifications when you are not using ChatON</string>
    <string name="setting_category_notice">Notice</string>
    <string name="contact_us">Contact us</string>
    <string name="recommendation">Suggestions</string>
    <string name="settings_password_lock_text_off">Off</string>
    <string name="settings_password_lock">Password lock</string>
    <string name="settings_title_more_apps">More apps</string>
    <string name="skin_bubble_download_list_title">Backgrounds and bubble styles</string>
    <string name="settings_send_message_using_enter">Send messages using the enter key on your keyboard</string>
    <string name="manage_buddies">Manage buddies</string>
    <string name="chat_display_settings">Chat room settings</string>
    <string name="setting_alerts">Alerts</string>
    <string name="backup">Backup</string>
    <string name="setting_alert_new_group_chat_description">Receive alerts when invited to new group chats</string>
    <string name="tellfriends_via_facebook">Facebook</string>
    <string name="tellfriends_via_twitter">Twitter</string>
    <string name="tellfriends_via_weibo">SINA Weibo</string>
    <string name="tellfriends_via_renren">Renren</string>
    <string name="settings_send_button_walkie_talkie">Turns the send button into the walkie talkie button</string>
    <string name="settings_ams_template">Template</string>
    <string name="download_chatroom_title">Chat room</string>
    <string name="setting_bubble_background_style">Bg and bubble styles</string>
    <string name="setting_downloads_group_title_chaton">ChatON</string>
    <string name="setting_downloads_preference_title_sound">Sound</string>
    <string name="setting_downloads_preference_title_font">Font</string>
    <string name="more_menu_support">Support</string>
    <string name="setting_download_category_bg_and_styles_title">Bg and bubble styles</string>
    <string name="setting_download_category_animessage">Animessage</string>
    <string name="anicon_download_list_title_modified_anicons">Anicons</string>
    <string name="qcmd_command_only">Command only</string>
    <string name="qcmd_open_chaton">Open ChatON</string>
    <string name="qcmd_recipient">Recipient</string>
    <string name="qcmd_jump_conversation">Jump to a conversation with the selected recipient</string>
    <string name="qcmd_jump_buddies">Jump to your buddies page to select a chat recipient</string>
    <string name="qcmd_message">Message</string>
    <string name="qcmd_send_message">Send a message to the selected recipient via ChatON</string>
    <string name="empty">Any word</string>
    <string name="privacy_show_my_samsung_account">Show my Samsung account</string>
    <string name="buddy_contact_sync">Contact sync</string>
    <string name="setting_birthday_description">Notifies you of your buddies\' birthdays</string>
    <string name="setting_privacy_show_my_profile_picture">Show my profile picture</string>
    <string name="settings_birthday_notifications">Birthday notifications</string>
    <string name="account_connected_device">Connected devices</string>
    <string name="deregister_device">Deregister device</string>
    <string name="settings_blocked">Blocked buddies</string>
    <string name="trunk_menu_refresh">Refresh</string>
    <string name="settings_using_walkie_talkie">Use walkie talkie</string>
    <string name="delete_old_chat_rooms">Delete old chat rooms</string>
    <string name="delete_old_chat_rooms_descriptions">Delete chat rooms not used within the last 3 months</string>
    <string name="settings_hided">Hidden buddies</string>
    <string name="setting_enter_key_title">Use the enter key to send</string>
    <string name="settings_sound">Sound</string>
    <string name="setting_push_notifications">Push notifications</string>
    <string name="settings_popup_notifications">Pop-up notifications</string>
    <string name="setting_alert_new_group_chat">Alert for new group chat</string>
    <string name="settings_vibration">Vibration</string>
    <string name="settings_alert_tone">Notification ringtone</string>
    <string name="settings_popup_type">Pop-up notification type while is screen on</string>
    <string name="settings_LED_indicator">LED indicator</string>
    <string name="call_settings">Call settings</string>
    <string name="settings_about_service">About this service</string>
    <string name="setting_chat_autoresend_title">Auto resend</string>
    <string name="setting_chat_autoresend_description_off">Off</string>
    <string name="chaton_voice_video_chat">ChatON Voice &amp; Video Chat</string>
    <string name="select_chat_type">Select chat type</string>
</resources>