<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:title="@string/setting_push_notifications"
        android:key="pref_item_push_notification"
        android:summary="@string/push_notification_text"
        android:defaultValue="true"
        android:contentDescription="@string/setting_push_notifications"/>
    <CheckBoxPreference
        android:title="@string/settings_received_message"
        android:key="pref_item_received_message"
        android:summary="@string/settings_received_message_summary"
        android:contentDescription="@string/settings_received_message"/>
    <CheckBoxPreference
        android:title="@string/settings_popup_notifications"
        android:key="pref_item_blackscreen_popup"
        android:summary="@string/settings_popup_information"
        android:contentDescription="@string/settings_popup_notifications"/>
    <Preference
        android:layout="@layout/preference_item_common"
        android:title="@string/settings_popup_type"
        android:key="pref_item_popup_type"
        android:widgetLayout="@layout/preference_widget_arrow"
        android:contentDescription="@string/settings_popup_type"/>
    <CheckBoxPreference
        android:title="@string/setting_alert_new_group_chat"
        android:key="pref_item_alert_group_chat"
        android:summary="@string/setting_alert_new_group_chat_description"
        android:contentDescription="@string/setting_alert_new_group_chat"/>
    <Preference
        android:layout="@layout/preference_item_common"
        android:title="@string/settings_type"
        android:key="pref_item_type"
        android:widgetLayout="@layout/preference_widget_arrow"
        android:contentDescription="@string/settings_type"/>
    <Preference
        android:layout="@layout/preference_item_common"
        android:title="@string/settings_mute_alert"
        android:key="pref_item_mute"
        android:summary="@string/settings_mute_none"
        android:widgetLayout="@layout/preference_widget_arrow"
        android:contentDescription="@string/settings_mute_alert"/>
</PreferenceScreen>
