<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:key="pref_screen">
    <PreferenceCategory
        android:layout="@layout/layout_preference_category"
        android:title="@string/settings_title_more_apps"
        android:key="settings_title_more_apps">
        <com.sec.chaton.settings.AboutNewNotice
            android:layout="@layout/preference_item_common"
            android:title="@string/chaton_voice_video_chat"
            android:key="pref_item_downloads_chaton_v"
            android:contentDescription="@string/chaton_voice_video_chat"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/layout_preference_category"
        android:title="@string/setting_downloads_group_title_chaton">
        <com.sec.chaton.settings.AboutNewNotice
            android:layout="@layout/preference_item_common"
            android:title="@string/settings_alert_tone"
            android:key="pref_item_downloads_sound"
            android:contentDescription="@string/setting_downloads_preference_title_sound"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/layout_preference_category"
        android:title="@string/download_chatroom_title">
        <com.sec.chaton.settings.AboutNewNotice
            android:layout="@layout/preference_item_common"
            android:title="@string/anicon_download_list_title_modified_anicons"
            android:key="pref_item_downloads_ticcon"
            android:contentDescription="@string/anicon_download_list_title_modified_anicons"/>
        <com.sec.chaton.settings.AboutNewNotice
            android:layout="@layout/preference_item_common"
            android:title="@string/setting_download_category_bg_and_styles_title"
            android:key="pref_item_downloads_theme"
            android:contentDescription="@string/skin_bubble_download_list_title"/>
        <com.sec.chaton.settings.AboutNewNotice
            android:layout="@layout/preference_item_common"
            android:title="@string/setting_downloads_preference_title_font"
            android:key="pref_item_downloads_font"
            android:contentDescription="@string/setting_downloads_preference_title_font"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/layout_preference_category"
        android:title="@string/setting_download_category_animessage">
        <com.sec.chaton.settings.AboutNewNotice
            android:layout="@layout/preference_item_common"
            android:title="@string/settings_ams_template"
            android:key="pref_item_downloads_ams_template"
            android:contentDescription="@string/settings_ams_template"/>
        <com.sec.chaton.settings.AboutNewNotice
            android:layout="@layout/preference_item_common"
            android:title="@string/ams_background"
            android:key="pref_item_downloads_ams_background"
            android:contentDescription="@string/ams_background"/>
        <com.sec.chaton.settings.AboutNewNotice
            android:layout="@layout/preference_item_common"
            android:title="@string/ams_title_stamp"
            android:key="pref_item_downloads_ams_stamp"
            android:contentDescription="@string/ams_title_stamp"/>
    </PreferenceCategory>
</PreferenceScreen>
