<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:title="@string/settings_privacy_showmynumber"
        android:key="pref_item_phonenumber"
        android:contentDescription="@string/settings_privacy_showmynumber"/>
    <Preference
        android:layout="@layout/preference_item_common"
        android:title="@string/setting_privacy_show_my_profile_picture"
        android:key="pref_item_show_profileimage"
        android:widgetLayout="@layout/preference_widget_arrow"
        android:contentDescription="@string/setting_privacy_show_my_profile_picture"/>
    <CheckBoxPreference
        android:title="@string/privacy_show_my_samsung_account"
        android:key="pref_item_samsung_account"
        android:contentDescription="@string/privacy_show_my_samsung_account"/>
    <Preference
        android:layout="@layout/preference_item_common"
        android:title="@string/setting_birthday"
        android:key="pref_item_birthday"
        android:contentDescription="@string/setting_birthday"/>
    <Preference
        android:layout="@layout/preference_item_common"
        android:title="@string/poston_title"
        android:key="pref_item_poston"
        android:contentDescription="@string/poston_title"/>
    <Preference
        android:layout="@layout/preference_item_common"
        android:title="@string/settings_password_lock"
        android:key="pref_item_password_lock"
        android:summary="@string/settings_password_lock_text_off"
        android:defaultValue="false"
        android:contentDescription="@string/settings_password_lock"/>
</PreferenceScreen>
