<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/trunk_noraml_menu">
        <item
            android:icon="@drawable/actionbar_ic_delete"
            android:id="@+id/btnDeleteMode"
            android:orderInCategory="1"
            android:title="@string/menu_chat_delete"
            android:showAsAction="always"/>
        <item
            android:icon="@drawable/actionbar_ic_filter"
            android:id="@+id/trunk_menu_listby"
            android:orderInCategory="1"
            android:title="@string/buddy_list_optionmenu_sortby"
            android:showAsAction="never"/>
        <item
            android:icon="@drawable/actionbar_ic_list"
            android:id="@+id/trunk_menu_refresh"
            android:orderInCategory="1"
            android:title="@string/trunk_menu_refresh"
            android:showAsAction="never"/>
    </group>
    <group android:id="@+id/trunk_menu_delete">
        <item
            android:id="@+id/btnForModeChange"
            android:orderInCategory="1"
            android:title="@string/dialog_cancel"
            android:showAsAction="always"/>
        <item
            android:id="@+id/btnDeleteComplete"
            android:orderInCategory="1"
            android:title="@string/done"
            android:showAsAction="always"/>
    </group>
</menu>
