<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:title="@string/settings_LED_indicator"
        android:key="pref_item_led"
        android:defaultValue="true"
        android:contentDescription="@string/settings_LED_indicator"/>
    <CheckBoxPreference
        android:title="@string/settings_sound"
        android:key="pref_item_sound"
        android:defaultValue="true"
        android:contentDescription="@string/settings_sound"/>
    <CheckBoxPreference
        android:title="@string/settings_vibration"
        android:key="pref_item_vibration"
        android:defaultValue="true"
        android:contentDescription="@string/settings_vibration"/>
    <com.sec.chaton.settings.RingtonePreference2
        android:title="@string/settings_alert_tone"
        android:key="pref_item_sound_type"
        android:widgetLayout="@layout/preference_widget_arrow"
        android:dependency="pref_item_sound"
        android:showDefault="false"
        android:showSilent="true"
        android:contentDescription="@string/settings_alert_tone"/>
</PreferenceScreen>
