<?xml version="1.0" encoding="utf-8"?>
<spellscroll xmlns:android="http://schemas.android.com/apk/res/android"
    android:label="@string/app_name"
    android:icon="@drawable/icon"
    android:name="com.sec.chaton"
    android:hint="@string/empty">
    <spell
        android:label="@string/qcmd_command_only"
        android:icon="@drawable/icon"
        android:name="ChatOn_Launch"
        android:hint="@string/qcmd_open_chaton">
        <spelleffect>
            <intent
                android:targetPackage="com.sec.chaton"
                android:action="android.intent.action.SPELL"
                android:targetClass="com.sec.chaton.HomeActivity"/>
            <extra-attr
                android:name="flags"
                android:value="FLAG_ACTIVITY_CLEAR_TOP|FLAG_ACTIVITY_NEW_TASK"/>
        </spelleffect>
    </spell>
    <spell
        android:label="@string/qcmd_recipient"
        android:icon="@drawable/icon"
        android:name="ChatOn_Buddy"
        android:hint="@string/qcmd_jump_conversation">
        <spelleffect>
            <intent
                android:targetPackage="com.sec.chaton"
                android:action="android.intent.action.SPELL"
                android:targetClass="com.sec.chaton.HomeActivity">
                <intent-filter>
                    <data android:mimeType="text/plain"/>
                    <data android:scheme="chaton"/>
                </intent-filter>
                <extra
                    android:name="chatonbuddy"
                    android:value="{{NAME}}"/>
            </intent>
            <extra-attr
                android:name="flags"
                android:value="FLAG_ACTIVITY_CLEAR_TOP|FLAG_ACTIVITY_NEW_TASK"/>
        </spelleffect>
        <ingredient
            android:label="@string/empty"
            android:name="NAME"
            android:inputType="text"/>
    </spell>
    <spell
        android:label="@string/qcmd_message"
        android:icon="@drawable/icon"
        android:name="ChatOn_Message"
        android:hint="@string/qcmd_jump_buddies">
        <spelleffect>
            <intent
                android:targetPackage="com.sec.chaton"
                android:action="android.intent.action.SPELL"
                android:targetClass="com.sec.chaton.HomeActivity">
                <extra
                    android:name="chatonmessage"
                    android:value="{{MESSAGE}}"/>
            </intent>
            <intent-filter>
                <data android:mimeType="text/plain"/>
                <data android:scheme="chaton"/>
            </intent-filter>
            <extra-attr
                android:name="flags"
                android:value="FLAG_ACTIVITY_CLEAR_TOP|FLAG_ACTIVITY_NEW_TASK"/>
        </spelleffect>
        <ingredient
            android:label="@string/empty"
            android:name="MESSAGE"
            android:inputType="text"/>
    </spell>
    <spell
        android:label="@string/qcmd_message"
        android:icon="@drawable/icon"
        android:name="ChatOn_Selected_Message"
        android:hint="@string/qcmd_send_message">
        <spelleffect>
            <intent
                android:targetPackage="com.sec.chaton"
                android:action="android.intent.action.SPELL"
                android:targetClass="com.sec.chaton.HomeActivity">
                <extra
                    android:name="chatonbuddy"
                    android:value="{{NAME}}"/>
                <extra
                    android:name="chatonmessage"
                    android:value="{{MESSAGE}}"/>
            </intent>
            <intent-filter>
                <data android:mimeType="text/plain"/>
                <data android:scheme="chaton"/>
            </intent-filter>
            <extra-attr
                android:name="flags"
                android:value="FLAG_ACTIVITY_CLEAR_TOP|FLAG_ACTIVITY_NEW_TASK"/>
        </spelleffect>
        <ingredient
            android:label="@string/empty"
            android:name="NAME"
            android:inputType="text">
            <extra-attr
                android:name="screenType"
                android:value="CONTACT"/>
        </ingredient>
        <ingredient
            android:label="@string/empty"
            android:name="MESSAGE"
            android:inputType="text"/>
    </spell>
</spellscroll>
