<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:title="@string/setting_category_notice"
        android:key="pref_item_noti"
        android:fragment="com.sec.chaton.settings.FragmentWebViewTablet">
        <extra
            android:name="PARAM_MENU"
            android:value="Noti"/>
    </header>
    <header
        android:title="@string/settings_help"
        android:key="pref_item_help"
        android:fragment="com.sec.chaton.settings.FragmentWebViewTablet">
        <extra
            android:name="PARAM_MENU"
            android:value="Help"/>
    </header>
    <header
        android:title="@string/contact_us"
        android:key="pref_item_VOC"
        android:fragment="com.sec.chaton.settings.FragmentWebViewTablet">
        <extra
            android:name="PARAM_MENU"
            android:value="VOC"/>
    </header>
</preference-headers>
